--- a/transifex-tutorial/transifex-tutorial.tex
+++ b/transifex-tutorial/transifex-tutorial.tex
@@ -38,7 +38,7 @@ You will be taken to the registration page which looks like this:
 \begin{center}
     \centerline{\includegraphics[width=0.8\paperwidth]{images/enterdetails.png}}
 \end{center}
-Please choose a username and enter a valid email address. Choose password and enter it into the two password boxes. Click in the ``Sign up'' button when you are done. You will recieve an email at the address you entered. The email contains a link which you must click on to activate your account. You will be then be taken to this page:
+Please choose a username and enter a valid email address. Choose password and enter it into the two password boxes. Click in the ``Sign up'' button when you are done. You will receive an email at the address you entered. The email contains a link which you must click on to activate your account. You will then be taken to this page:
 \begin{center}
     \centerline{\includegraphics[width=0.8\paperwidth]{images/signedin.png}}
 \end{center}
@@ -47,11 +47,11 @@ Please choose a username and enter a valid email address. Choose password and en
 
 \section*{Step 2: Finding the project you will work on}
 
-Let's assume you have been assigned to the ``Atomic Combinations 1'' resource under the ``Physical Science Grade 11'' project. Clicking on the ``Projects'' link at the top of the page should take you to a page that looks like this:
+Let's assume you have been assigned to the ``Atomic Combinations 1'' resource under the ``Physical Sciences Grade 11'' project. Clicking on the ``Projects'' link at the top of the page should take you to a page that looks like this:
 \begin{center}
     \centerline{\includegraphics[width=0.8\paperwidth]{images/selectproject.png}}
 \end{center}
-If you are a member of any translation teams, you will see a link under ``Participating in xxx teams'' in the above image. Click on the link that says ``Physical Science Grade 11'' (or whichever project you are contributing to).
+If you are a member of any translation teams, you will see a link under ``Participating in xxx teams'' in the above image. Click on the link that says ``Physical Sciences Grade 11'' (or whichever project you are contributing to).
 
 You will then see the resources that have been uploaded to the project. The Siyavula team will do this. Look for the link that says ``Atomic Combinations 1'' and click on it:
 \begin{center}
@@ -116,7 +116,7 @@ The warning will dissappear if you include the entire marker \verb|<_:emphasis-1
 \end{center}
 \textbf{Note:} in the screenshots above the special marker was called \verb|<_:number-1/>|. You will see various kinds of markers starting with \verb|<_:| and ending with \verb|/>| while you do translations. Please remember to include them in the translated strings. Many of them contain special commands that denote chemical symbols, units, numbers etc.
 
-Sometimes it can be difficult to translate a string properly if you cannot see the strings contained within the special markers. In these cases it will help if you consult the pdf version of the chapter you are working on. You should be able to hit \texttt{ctrl} and \texttt{f} simultaneously on your keyboard while inside your pdf reader, that will bring up a search box into which you can type the english string you are translating. This will find that string for you in the document and let you scrutinise the full original string in context.
+Sometimes it can be difficult to translate a string properly if you cannot see the strings contained within the special markers. In these cases it will help if you consult the PDF version of the chapter you are working on. You should be able to hit \texttt{ctrl} and \texttt{f} simultaneously on your keyboard while inside your PDF reader, that will bring up a search box into which you can type the english string you are translating. This will find that string for you in the document and let you scrutinise the full original string in context.
 
 
 \section*{Step 4: Reviewing translations}
